<resources>
    <string name="app_name">AndroiD</string>
    <string name="common_name">Common name</string>
    <string name="country_name">Country</string>
    <string name="country_label">Country :</string>
    <string name="common_name_label">Common Name :</string>
    <string name="id_label">Id :</string>
    <string name="name_label">Name :</string>
    <string name="vehicle_type_header">VEHICLE TYPE</string>
    <string name="quote_header">QUOTE</string>
    <string name="sample_quote">Sample Quote!</string>
    <string name="details_header">DETAILS</string>
    <string name="login_toolbar_text">AndroiD</string>
    <string name="login_header">SIGN IN</string>
    <string name="username_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="firstname_label">First Name</string>
    <string name="lastname_label">Last Name</string>
    <string name="age_label">Age</string>
    <string name="gender_label">Gender</string>
    <string name="email_label">Email</string>
    <string name="uid_label">Id</string>
    <string name="user_name_label">User Name</string>
</resources>