<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".view.ProfileFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp"
        android:layout_margin="@dimen/spacing_24dp"
        android:layout_gravity="center_horizontal">
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/android"
        android:layout_gravity="center_horizontal"
        android:background="#3F3F43"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/spacing_8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:layout_marginEnd="@dimen/spacing_8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_8dp"
        android:background="@color/item_background_dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:paddingBottom="@dimen/spacing_16dp">

            <TextView
                android:id="@+id/id_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uid_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/idView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:paddingBottom="@dimen/spacing_16dp">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/usernameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/firstname_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/firstname_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/firstnameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/lastname_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lastname_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/lastnameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:paddingBottom="@dimen/spacing_16dp">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/emailView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:paddingBottom="@dimen/spacing_16dp">

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/genderView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>