<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background"
    tools:context=".view.CarFragment"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/details_header"
            android:textColor="@color/vehicle_type_heading"
            android:textSize="18dp"
            android:fontFamily="@font/bungee"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp"
        android:background="@color/item_background_dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/country_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/country_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/CountryView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/commonName_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/common_name_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/CommonNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/id_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id_label"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/idView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Name :"
                android:textColor="@color/item_text_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/NameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/vehicle_type_header"
            android:textColor="@color/vehicle_type_heading"
            android:textSize="18dp"
            android:textStyle="bold"
            android:fontFamily="@font/bungee"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_background"
            app:layout_constraintTop_toBottomOf="@+id/type"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>