<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background"
    tools:context=".view.QuoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_8dp">

        <TextView
            android:id="@+id/quotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/quote_header"
            android:textColor="@color/quotes_heading"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_background"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/quotes"
            tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/quotesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_quote"
            android:fontFamily="@font/alatsi"
            android:background="@color/item_background"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="@dimen/spacing_8dp" />
        </androidx.cardview.widget.CardView>
        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/refresh"
            android:backgroundTint="#00000000"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_background"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/refreshButton"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:id="@+id/linearvehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/item_background_dark"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/CountryView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/spacing_8dp"
                    android:text="@string/country_name"
                    android:textColor="@color/quotes_heading"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CommonNameView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/spacing_8dp"
                    android:text="@string/common_name"
                    android:textColor="@color/quotes_heading"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/item_background"
            app:layout_constraintTop_toBottomOf="@+id/refresh"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>